tests/sources/should-not-compile/switch-empty-condition.c
int x = 5;
switch ()
{
    case 1:
        x + 1;
}
